綜合應用測驗/Problem2/deploy/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poc-asiayo-web
  namespace: asiayo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: poc-asiayo-web
  template:
    metadata:
      labels:
        app: poc-asiayo-web
    spec:
      containers:
        - name: nginx
          image: nginx:1.21
          ports:
            - containerPort: 80
          volumeMounts:
            - name: web-content
              mountPath: /usr/share/nginx/html
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
      volumes:
        - name: web-content
          persistentVolumeClaim:
            claimName: poc-asiayo-pvc
