綜合應用測驗/Problem2/deploy/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poc-asiayo-web-svc
  namespace: asiayo
spec:
  selector:
    app: poc-asiayo-web
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
